--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           </nav>
         </header>
         <div class="container">
-          <div class="row frase">
-            
+          <div class="row frase text-center">
+            <a href="#portfolio"> Ver Portafolio</a>
           </div>
           <div class="row text-center">
           <a href="#about-me">
@@ -74,7 +74,7 @@
     			</div>
     			<div class="col-xs-12 col-sm-8 text-center">
     				<h3>Ana Lucia Carhuaz Meneses</h3>
-    				<p class="description">Soy alumna de Laboratoria Perú e Ingeniera de Sistemas tengo 22 años, me encanta el mundo de la tecnología, me encanta programar, me encanta descubrir nuevos retos cada día.</p>
+    				<p class="description">Soy alumna de Laboratoria Perú e Ingeniera de Sistemas tengo 22 años,con conocimiento en de HTML5, CSS3, Bootstrap, JavaScript. Me encanta el mundo de la tecnología, me encanta programar, me encanta descubrir nuevos retos cada día.</p>
     			</div>
     		</div>
     	</div>
