change title bootstrap.min

--- a/index.html
+++ b/index.html
@@ -1,121 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-     <meta name="description" content="Mi portafolio">
-      <meta name="author" content="Ana Lucia Carhuaz Meneses">
-	<title>Portafolio</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="css/main.css">
-	<link href='https://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-</head>
-<body>
-	<!--header -->
-    <section class="hero-image">
-      <div class="bg-dark">
-        <header>
-          <nav class="navbar navbar-default" id="page-top">
-            <div class="container">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">
-                  Ana Carhuaz
-                </a>
+  <head>
+  	<meta charset="UTF-8">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Mi portafolio">
+    <meta name="author" content="Ana Lucia Carhuaz Meneses">
+  	<title>Mi Portafolio</title>
+  	<link href="css/bootstrap.min.css" rel="stylesheet">
+  	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  	<link href="css/main.css" rel="stylesheet">
+  	<link href='https://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
+  	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+  	<!--header -->
+      <section class="hero-image">
+        <div class="bg-dark">
+          <header>
+            <nav class="navbar navbar-default" id="page-top">
+              <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="index.html">
+                    Ana Carhuaz
+                  </a>
+                </div>
+                <!--menu desplegable -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li>
+                      <a class="active" href="index.html">Inicio</a>
+                    </li>
+                    <li>
+                      <a href="#about-me">Sobre mi</a>
+                    </li>
+                    <li>
+                      <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                      <a href="#contact-me">Contact</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <!--menu desplegable -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                  <li>
-                    <a class="active" href="index.html">Inicio</a>
-                  </li>
-                  <li>
-                    <a href="#about-me">Sobre mi</a>
-                  </li>
-                  <li>
-                    <a href="#portfolio">Portfolio</a>
-                  </li>
-                  <li>
-                    <a href="#contact-me">Contact</a>
-                  </li>
-                </ul>
-              </div>
+            </nav>
+          </header>
+          <div class="container">
+            <div class="row frase text-center">
+              <a href="#portfolio"> Ver Portafolio</a>
             </div>
-          </nav>
-        </header>
-        <div class="container">
-          <div class="row frase text-center">
-            <a href="#portfolio"> Ver Portafolio</a>
-          </div>
-          <div class="row text-center">
-          <a href="#about-me">
-            <img src="img/icono-flecha-white.png" alt="flecha">
-          </a>          
+            <div class="row text-center">
+            <a href="#about-me">
+              <img src="img/icono-flecha-white.png" alt="flecha">
+            </a>          
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="about-me" id="about-me">
-    	<div class="container">
-    		<div class="row text-center">
-    			<h2>Sobre me</h2>
-    		</div>
-    		<div class="row">
-    			<div class="col-xs-12 col-sm-4 text-center">
-    				<img src="img/foto.jpg" alt="mi avatar">
-    			</div>
-    			<div class="col-xs-12 col-sm-8 text-center">
-    				<h3>Ana Lucia Carhuaz Meneses</h3>
-    				<p class="description">Soy alumna de Laboratoria Perú e Ingeniera de Sistemas tengo 22 años,con conocimiento en de HTML5, CSS3, Bootstrap, JavaScript. Me encanta el mundo de la tecnología, me encanta programar, me encanta descubrir nuevos retos cada día.</p>
-    			</div>
-    		</div>
-    	</div>
-    </section>
-    <section class="portfolio" id="portfolio">
-    	<div class="container">
-    		<div class="row text-center">
-    			<h2>Bienvenidos a Mi Portafolio</h2>
-    		</div>
-    		<div class="row text-center">
-    			<div class="col-xs-12 col-sm-4">
-    				<a href="http://alucia.github.io/freelancer/">
-    					<img src="img/freelancer.png" alt="freelancer">
-    				</a>
-    			</div>
-    			<div class="col-xs-12 col-sm-4">
-    				<a href="http://alucia.github.io/freelancer/">
-    					<img src="img/theme.png" alt="freelancer">
-    				</a>
-    			</div>
-    			<div class="col-xs-12 col-sm-4">
-    				<a href="http://alucia.github.io/dashy/">
-    					<img src="img/dashy.png" alt="freelancer">
-    				</a>
-    			</div>
-    		</div>
-    	</div>
-    </section>
-    <section class="contact" id="contact-me">
-    	<div class="container">
-    		<div class="row text-center">
-    			<h2>Contact</h2>
-    		</div>
-    	</div>
-    </section>
-		<footer class="text-center">
-      Copyright &copy; 
-      <a href="https://github.com/Alucia">Ana Lucia Carhuaz Meneses</a> Porfolio 2015.
-    </footer>
-    <script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-</body>
+      </section>
+      <section class="about-me" id="about-me">
+      	<div class="container">
+      		<div class="row text-center">
+      			<h2>Sobre me</h2>
+      		</div>
+      		<div class="row">
+      			<div class="col-xs-12 col-sm-4 text-center">
+      				<img src="img/foto.jpg" alt="mi avatar">
+      			</div>
+      			<div class="col-xs-12 col-sm-8 text-center">
+      				<h3>Ana Lucia Carhuaz Meneses</h3>
+      				<p class="description">Soy alumna de Laboratoria Perú e Ingeniera de Sistemas tengo 22 años,con conocimiento en de HTML5, CSS3, Bootstrap, JavaScript. Me encanta el mundo de la tecnología, me encanta programar, me encanta descubrir nuevos retos cada día.</p>
+      			</div>
+      		</div>
+      	</div>
+      </section>
+      <section class="portfolio" id="portfolio">
+      	<div class="container">
+      		<div class="row text-center">
+      			<h2>Bienvenidos a Mi Portafolio</h2>
+      		</div>
+      		<div class="row text-center">
+      			<div class="col-xs-12 col-sm-4">
+      				<a href="http://alucia.github.io/freelancer/">
+      					<img src="img/freelancer.png" alt="freelancer">
+      				</a>
+      			</div>
+      			<div class="col-xs-12 col-sm-4">
+      				<a href="http://alucia.github.io/freelancer/">
+      					<img src="img/theme.png" alt="freelancer">
+      				</a>
+      			</div>
+      			<div class="col-xs-12 col-sm-4">
+      				<a href="http://alucia.github.io/dashy/">
+      					<img src="img/dashy.png" alt="freelancer">
+      				</a>
+      			</div>
+      		</div>
+      	</div>
+      </section>
+      <section class="contact" id="contact-me">
+      	<div class="container">
+      		<div class="row text-center">
+      			<h2>Contact</h2>
+      		</div>
+      	</div>
+      </section>
+  		<footer class="text-center">
+        Copyright &copy; 
+        <a href="https://github.com/Alucia">Ana Lucia Carhuaz Meneses</a> Porfolio 2015.
+      </footer>
+      <script src="js/jquery.js"></script>
+  	<script src="js/bootstrap.min.js"></script>
+  	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+  </body>
 </html>
