--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   	<link href="css/main.css" rel="stylesheet">
   	<link href='https://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
   	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
   	<!--header -->
