--- a/index.html
+++ b/index.html
@@ -58,12 +58,29 @@
           </div>
           <div class="col-xs-12 col-sm-6">
             <div class="phase">
-              <h1 class="media-heading">Ana Carhuaz</h1>
+              <h1 class="media-heading">Ana Lucia Carhuaz</h1>
+              <p>Desarrolladora Web</p>
             </div>
           </div>
         </div>        
       </div>
-    </div>    
+    </div>   
+    <section class="about-me" id="about-me">
+        <div class="container">
+          <div class="row text-center">
+            <h2>Sobre me</h2>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-4">
+              
+            </div>
+            <div class="col-xs-12 col-sm-4 text-center">
+              <img src="img/foto.jpg" alt="mi avatar">
+            </div>
+            <div class="col-xs-12 col-sm-4"></div>
+          </div>
+        </div>
+      </section> 
     <footer class="text-center">
       Copyright &copy; 
       <a href="https://github.com/Alucia" target="_blank">Ana Lucia Carhuaz Meneses</a> Porfolio 2015.
