--- a/index.html
+++ b/index.html
@@ -66,21 +66,63 @@
       </div>
     </div>   
     <section class="about-me" id="about-me">
-        <div class="container">
-          <div class="row text-center">
-            <h2>Sobre me</h2>
+      <div class="container">
+        <div class="row text-center">
+          <h2>Sobre mi</h2>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 text-center">
+            <img src="img/foto.jpg" alt="mi avatar">
           </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-4">
-              
-            </div>
-            <div class="col-xs-12 col-sm-4 text-center">
-              <img src="img/foto.jpg" alt="mi avatar">
-            </div>
-            <div class="col-xs-12 col-sm-4"></div>
+          <div class="col-xs-12 col-sm-8 text-center">
+            <h3>Ana Lucia Carhuaz Meneses</h3>
+            <p class="description">Soy alumna de Laboratoria Perú e Ingeniera de Sistemas tengo 22 años,con conocimiento en de HTML5, CSS3, Bootstrap, JavaScript. Me encanta el mundo de la tecnología, me encanta programar, me encanta descubrir nuevos retos cada día.</p>
           </div>
         </div>
-      </section> 
+      </div>
+    </section> 
+    <section class="portfolio" id="portfolio">
+      <div class="container">
+        <div class="row text-center">
+          <h2>Bienvenidos a Mi Portafolio</h2>
+        </div>
+        <div class="row text-center">
+          <div class="col-xs-12 col-sm-4">
+            <a href="http://alucia.github.io/freelancer/">
+              <img src="img/freelancer.png" alt="freelancer">
+            </a>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <a href="http://alucia.github.io/freelancer/">
+              <img src="img/theme.png" alt="freelancer">
+            </a>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <a href="http://alucia.github.io/dashy/">
+              <img src="img/dashy.png" alt="freelancer">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contact" id="contact-me">
+      <div class="container">
+        <div class="row text-center">
+          <h2 class="text-center">Contáctanos</h2>
+          <div class="col-xs-12 col-sm-4 col-sm-push-4">
+            <form action="" method="post">
+              <label for="nombre"></label>
+              <input id="nombre" type="text"name="nombre" placeholder="Nombre y Apellido" required=""/ >
+              <label for="email"></label>
+              <input id="email" type="email" name="email" placeholder="ejemplo@correo.com" required="" />
+              <label for="mensaje"></label>
+              <textarea id="mensaje" name="mensaje" placeholder="Mensaje" required></textarea>
+              <input id="submit" type="submit" name="submit" value="Enviar" />
+            </form> 
+          </div>        
+        </div>
+      </section>
+    </div>
     <footer class="text-center">
       Copyright &copy; 
       <a href="https://github.com/Alucia" target="_blank">Ana Lucia Carhuaz Meneses</a> Porfolio 2015.
