--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   	<link href="css/main.css" rel="stylesheet">
   	<link href='https://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
-  	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+  	<link href='https://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
   	<!--header -->
@@ -77,7 +79,25 @@
           <div class="col-xs-12 col-sm-8 text-center">
             <h3>Ana Lucia Carhuaz Meneses</h3>
             <p class="description">Soy alumna de Laboratoria Perú e Ingeniera de Sistemas tengo 22 años,con conocimiento en de HTML5, CSS3, Bootstrap, JavaScript. Me encanta el mundo de la tecnología, me encanta programar, me encanta descubrir nuevos retos cada día.</p>
+            <button class="btn" type="submit" name="submit" value="Enviar" />
+          </div></button>
+        </div>
+      </div>
+    </section> 
+    <section class="skill">
+      <div class="container">
+        <div class="row text-center">
+          <h2>Mis  habilidades</h2>
+          <div class="col-xs-12 col-sm-3">
+            <div class="icon text-center">
+              <img src="img/html.svg" alt="Html y css">
+              <h3>HTML y CSS</h3>
+            </div>
           </div>
+          <div class="col-xs-12 col-sm-3">
+            <img src="img/bootstrap.svg">
+          </div>
+          <div class="col-xs-12 col-sm-3"></div>
         </div>
       </div>
     </section> 
@@ -105,6 +125,9 @@
         </div>
       </div>
     </section>
+    <section class="social">
+      
+    </section>
     <section class="contact" id="contact-me">
       <div class="container">
         <div class="row text-center">
@@ -122,12 +145,12 @@
           </div>        
         </div>
       </section>
-    </div>
+    </section>
     <footer class="text-center">
       Copyright &copy; 
       <a href="https://github.com/Alucia" target="_blank">Ana Lucia Carhuaz Meneses</a> Porfolio 2015.
     </footer>
-      <script src="js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
   	<script src="js/bootstrap.min.js"></script>
   	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   </body>
