--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           <div class="col-xs-12 col-sm-8 text-center">
             <h3>Ana Lucia Carhuaz Meneses</h3>
             <p class="description">Soy alumna de Laboratoria Perú e Ingeniera de Sistemas tengo 22 años,con conocimiento en de HTML5, CSS3, Bootstrap, JavaScript. Me encanta el mundo de la tecnología, me encanta programar, me encanta descubrir nuevos retos cada día.</p>
-            <button class="btn" type="submit" name="submit" value="Enviar" />
-          </div></button>
+            <a class="btn" href="https://docs.google.com/document/d/17GV-Hp_LgECURkXyJTD0VecR7oKJfkv_B8bBQ9J1RSI/edit?usp=sharing" target="_blank">Ver Cv</a>
+          </div>
         </div>
       </div>
     </section> 
