--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Ana Lucia Carhuaz Meneses">
   	<title>Mi Portafolio</title>
   	<link href="css/bootstrap.min.css" rel="stylesheet">
-  	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   	<link href="css/main.css" rel="stylesheet">
   	<link href='https://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
   	<link href='https://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
@@ -84,6 +84,21 @@
         </div>
       </div>
     </section> 
+    <section class="more-me">
+      <div class="container">
+        <div class="row text-center">
+        <h2>Mas sobre mi</h2>
+        <div class="col-xs-12 col-sm-4">
+          <i class="ff-font-awesome icon-heart"></i>
+        </div>  
+        <div class="col-xs-12 col-sm-4">
+          <i class="ff-font-awesome icon-heart"></i>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <i class="ff-font-awesome icon-heart"></i>
+        </div> 
+        </div> </div> 
+    </section>
     <section class="skill">
       <div class="container">
         <div class="row text-center">
