--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   	<link href="css/bootstrap.min.css" rel="stylesheet">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   	<link href="css/main.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-  	<link href='https://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
+    <link href="css/animate.css" rel="stylesheet"> 
   	<link href='https://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Hind:400,700' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   </head>
   <body>
   	<!--header -->
@@ -62,7 +61,7 @@
           </div>
           <div class="row text-center">
           <a href="#about-me">
-            <i class="fa fa-angle-down shake"></i>
+            <i class="fa fa-angle-down animated infinite bounce"></i>
           </a>          
           </div>
         </div>
@@ -91,20 +90,20 @@
           <h2>Mis  habilidades</h2>
           <div class="col-xs-12 col-sm-3">
             <div class="icon text-center">
-              <img src="img/bootstrap.svg">
+              <img src="img/html.png">
               <h3>HTML</h3>
             </div>
           </div>
           <div class="col-xs-12 col-sm-3">
-            <img src="img/bootstrap.svg">
+            <img src="img/css.jpg">
             <h3>Css</h3>
           </div>
           <div class="col-xs-12 col-sm-3">
-            <img src="img/bootstrap.svg">
+            <img src="img/js.jpg">
             <h3>JavaScript</h3>
           </div>
           <div class="col-xs-12 col-sm-3">
-            <img src="img/bootstrap.svg">
+            <img src="img/bootstrap.jpg">
             <h3>Bootstrap</h3>
           </div>
         </div>
@@ -118,17 +117,17 @@
         <div class="row text-center">
           <div class="col-xs-12 col-sm-4">
             <a href="http://alucia.github.io/freelancer/">
-              <img src="img/freelancer.png" alt="freelancer">
+              <img src="img/freelancer.png" alt="freelancer" target="blank">
             </a>
           </div>
           <div class="col-xs-12 col-sm-4">
             <a href="http://alucia.github.io/freelancer/">
-              <img src="img/theme.png" alt="freelancer">
+              <img src="img/theme.png" alt="freelancer" target="blank">
             </a>
           </div>
           <div class="col-xs-12 col-sm-4">
             <a href="http://alucia.github.io/dashy/">
-              <img src="img/dashy.png" alt="freelancer">
+              <img src="img/dashy.png" alt="freelancer" target="blank">
             </a>
           </div>
         </div>
@@ -141,7 +140,7 @@
       <div class="container">
         <div class="row text-center">
           <h2 class="text-center">Contáctanos</h2>
-          <div class="col-xs-12 col-sm-4 col-sm-push-4">
+          <div class="col-xs-12 col-sm-4 col-sm-push-8  ">
             <form action="" method="post">
               <label for="nombre"></label>
               <input id="nombre" type="text"name="nombre" placeholder="Nombre y Apellido" required=""/ >
