--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="col-xs-12 col-sm-8 text-center">
             <h3>Ana Lucia Carhuaz Meneses</h3>
             <p class="description">Soy alumna de Laboratoria Perú e Ingeniera de Sistemas tengo 22 años,con conocimiento en de HTML5, CSS3, Bootstrap, JavaScript. Me encanta el mundo de la tecnología, me encanta programar, me encanta descubrir nuevos retos cada día.</p>
-            <a class="btn" href="https://docs.google.com/document/d/17GV-Hp_LgECURkXyJTD0VecR7oKJfkv_B8bBQ9J1RSI/edit?usp=sharing" target="_blank">Ver Cv</a>
+            <a class="btn" href="https://www.linkedin.com/in/analuciacarhuazmeneses" target="_blank">Ver Cv</a>
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
     <section class="contact" id="contact-me">
       <div class="container">
         <div class="row text-center">
-          <h2 class="text-center">Contáctanos</h2>
+          <h2 class="text-center">Dejame un mensaje</h2>
           <div class="col-xs-12 col-sm-4 col-sm-push-8  ">
             <form action="" method="post">
               <label for="nombre"></label>
